<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:background="#DFD0D5"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/calculator" />

    <EditText
        android:id="@+id/etFirstValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enterFirstNumber"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etSecondValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enterSecondNumber"
        android:inputType="number"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="4dp"
        android:hint="@string/result"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_margin="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="5dp"
        android:background="#613F3F"
        android:padding="5dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/plus"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="5dp"
        android:background="#613F3F"
        android:padding="5dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/subtract"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="5dp"
        android:background="#613F3F"
        android:padding="5dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/multiply"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="5dp"
        android:background="#613F3F"
        android:padding="5dp"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:text="@string/divide"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />
</LinearLayout>